--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.Main"
+            android:name=".activities.ActivityMain"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,10 +21,8 @@
         </activity>
 
         <activity
-            android:name=".activities.About"
-            android:parentActivityName=".activities.Main">
-        </activity>
-
+            android:name=".activities.ActivityAbout"
+            android:parentActivityName=".activities.ActivityMain" />
     </application>
 
 </manifest>
