--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.ActivityMain"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -20,9 +20,6 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".activities.ActivityAbout"
-            android:parentActivityName=".activities.ActivityMain" />
     </application>
 
 </manifest>
