--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,17 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.PreferencesActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="com.muflone.django_hotels.PreferencesActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
