--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,12 @@
         </activity>
 
         <activity
-            android:name=".activities.PreferencesActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/app_name"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="com.muflone.django_hotels.PreferencesActivity" />
+                <action android:name="com.muflone.django_hotels.SettingsActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
