--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
+            android:exported="false"
             android:name=".activities.SettingsActivity"
             android:label="@string/app_name"
             android:parentActivityName=".activities.MainActivity"
