Fix for languagelevel continuosly changing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ def versionPatch = 0
 
 android {
     compileSdkVersion 28
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.muflone.android.django_hotels"
         minSdkVersion 17
@@ -54,4 +58,5 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.3.0@aar'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.medyo:android-about-page:1.2.5'
+    implementation 'com.google.guava:guava:27.1-android'
 }
