--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.medyo:android-about-page:1.2.5'
     implementation 'com.google.guava:guava:27.1-android'
+    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
 }
