--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,8 @@
         <activity android:name=".activities.AutoConfigurationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
                 <data
                     android:scheme="http"
                     android:host="hotels.android.muflone.com"
@@ -29,10 +27,8 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
                 <data
                     android:scheme="https"
                     android:host="hotels.android.muflone.com"
@@ -46,14 +42,12 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name=".activities.CreateShortcutActivity">
-        </activity>
+            android:name=".activities.CreateShortcutActivity" />
 
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
@@ -61,5 +55,4 @@
             tools:replace="android:screenOrientation" />
 
     </application>
-
 </manifest>
