Added .idea/dictionaries to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /local.properties
 /.idea/caches
 /.idea/codeStyles
+/.idea/dictionaries/
 /.idea/encodings.xml
 /.idea/libraries
 /.idea/modules.xml
