--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,8 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.3.0@aar'
-    implementation 'com.google.zxing:core:3.4.0'
+    //noinspection GradleDependency
+    implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.github.medyo:android-about-page:1.2.5'
     implementation 'com.google.guava:guava:28.2-android'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
