--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,15 +36,15 @@ android {
     defaultConfig {
         applicationId "com.muflone.android.django_hotels"
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 34
         versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
-                includeCompileClasspath = true
             }
         }
     }
@@ -57,16 +57,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             resValue "string", "app_version", "${defaultConfig.versionName}"
+            signingConfig signingConfigs.debug
         }
     }
     productFlavors {
     }
+    namespace 'com.muflone.android.django_hotels'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:preference-v7:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
